--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
           <artifactId>hibernate-ehcache</artifactId>
           <version>5.2.13.Final</version>
       </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
   <build>
