--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
       </dependency>
 
       <dependency>
+          <groupId>io.rest-assured</groupId>
+          <artifactId>rest-assured</artifactId>
+          <version>3.0.7</version>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
           <version>8.0.9-rc</version>
@@ -56,19 +63,19 @@
       <dependency>
           <groupId>com.fasterxml.jackson.jaxrs</groupId>
           <artifactId>jackson-jaxrs-base</artifactId>
-          <version>2.6.4</version>
+          <version>2.9.4</version>
       </dependency>
 
       <dependency>
           <groupId>com.fasterxml.jackson.jaxrs</groupId>
           <artifactId>jackson-jaxrs-json-provider</artifactId>
-          <version>2.6.4</version>
+          <version>2.9.4</version>
       </dependency>
 
       <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-annotations</artifactId>
-          <version>2.6.0</version>
+          <version>2.9.4</version>
       </dependency>
 
       <dependency>
